# itk_tasks

./: README.md  pyproject.toml
01/: 01-03_cls_attr.py  cache_decorator.py  cls_attr.py  singleton.py  singleton_import.py
01. Module/: 01-01_cache_decorator.py
02/: 02-01_search_sort_list.py
03. Module/03-01 Async HTTP-Request/: http_request.py
03. Module/03-02 Async advanced HTTP-Request/: advanced_http_request.py  async_request.py  result.json  results.json  urls.txt
04. Module/: parallel_process.py  result.json  tread_proc_single.py
06. Module/: exchange_rate.py
les/: 01.md
src/01/: 01-01_cache_decorator.py
src/03/03-01/: results.json
src/03/03-02/: advanced_http_request.py  advanced_http_requestOLD.py  results.json  urls.txt
src/04/: parallel_process.py  result.json
src/1_Basic/03/03-01/: http_request.py
src/1_Basic/03/03-02/: advanced_http_request.py  urls.txt
src/1_Basic/04/: result.json
src/1_Basic/06/: exchange_rate.py
src/2_DRF/01/: distributed_lock.py  my_queue.py  queue_db.py  rate_limiter.py  test_distributed_lock.py  test_rate_limiter.py
src/3_tasks/algorithmic/: longest_increasing_subsequence.py  rm_duplicates.py  run_length_encoding.py  two_sum.py
src/3_tasks/practics/: async_retry_decorator.py
