[project]
name = "lessons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "ruff>=0.12.3",
]


[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
